Fixing the background-color overlap over cat part

--- a/style.css
+++ b/style.css
@@ -7,22 +7,23 @@ p {
   font-weight: 500;
 }
 
-   .back {
-    position: fixed;
+  .back {
+
+    display: flex;
     padding: 0;
     margin: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: #ffffff1c;
     animation-name: backdiv;
     animation-duration: 1s;
-
-  }
+    animation-iteration-count: infinite;
+}
 
   .heart {
-    position: fixed;
+    display: flex;
     margin: auto;
     top: 0;
     right: 0;
@@ -60,20 +61,21 @@ p {
 
   @keyframes backdiv {
     50% {
-      background: #ffe6f2;
+      background: #fdffe6;
 
     }
   }
 
   @keyframes beat {
-    0% {
-      transform: scale(1) rotate(-45deg);
-      top: 0px;
-      left: 0px;
-    }
-    50% {
-      transform: scale(0.6) rotate(-45deg);
-      top: 249px;
-      left: 400px;
-    }
-  }
+
+0% {
+    transform: scale(1) rotate(-45deg);
+    top: 0px;
+    left: 0px;
+
+}
+50% {
+    transform: scale(5.6) rotate(-85deg);
+    top: 249px;
+    left: 400px;
+}
